--- a/games.html
+++ b/games.html
@@ -168,10 +168,10 @@
     const games = [
       {
         name: "شطرنج ساده",
-        icon: "games\chess\logo.png",
-        images: ["games\chess\Screenshot1.png", "games\chess\Screenshot2.png"],
+        icon: "games/chess/logo.png",
+        images: ["games/chess/Screenshot1.png", "games/chess/Screenshot2.png"],
         description: "این یک بازی شزرنج ساده ، ساخته شدن با زبان برنامه نویسی پایتون است.",
-        downloadLink: "games\chess\download.html"
+        downloadLink: "games/chess/download.html"
       }
       // برای افزودن بازی جدید، یک شیء جدید به آرایه اضافه کنید.
     ];
