--- a/games.html
+++ b/games.html
@@ -167,18 +167,11 @@
     /***** آرایه اطلاعات بازی‌ها *****/
     const games = [
       {
-        name: "بازی اول",
-        icon: "icon-game.png",
-        images: ["game-screenshot1.png", "game-screenshot2.png", "game-screenshot3.png"],
-        description: "توضیحات درباره بازی اول",
-        downloadLink: "https://example.com/game-download1"
-      },
-      {
-        name: "بازی دوم",
-        icon: "icon-game2.png",
-        images: ["game-screenshot4.png", "game-screenshot5.png"],
-        description: "توضیحات درباره بازی دوم",
-        downloadLink: "https://example.com/game-download2"
+        name: "شطرنج ساده",
+        icon: "games/chess/logo.png",
+        images: ["games/chess/Screenshot1.png", "games/chess/Screenshot2.png"],
+        description: "این یک بازی شزرنج ساده ، ساخته شدن با زبان برنامه نویسی پایتون است.",
+        downloadLink: "games/chess/download.html"
       }
       // برای افزودن بازی جدید، یک شیء جدید به آرایه اضافه کنید.
     ];
