--- a/games.html
+++ b/games.html
@@ -173,6 +173,13 @@
         description: "این یک بازی شزرنج ساده ، ساخته شدن با زبان برنامه نویسی پایتون است.",
         downloadLink: "games/chess/download.html"
       }
+      {
+        name: "بازی",
+        icon: "games/game/logo.png",
+        images: ["games/chess/Screenshot1.png"],
+        description: "نصب کنی ، متوجه میشی چه بازی هست.😈",
+        downloadLink: "games/game/download.html"
+      }
       // برای افزودن بازی جدید، یک شیء جدید به آرایه اضافه کنید.
     ];
     
