--- a/games.html
+++ b/games.html
@@ -20,6 +20,8 @@
       top: 0;
       left: 0;
       z-index: -1;
+      width: 100%;
+      height: 100%;
     }
     /* استایل محتوای صفحه */
     .container {
