--- a/games.html
+++ b/games.html
@@ -178,7 +178,7 @@
       {
         name: "بازی",
         icon: "games/game/logo.png",
-        images: ["games/chess/Screenshot1.png"],
+        images: ["games/game/Screenshot1.png"],
         description: "نصب کنی ، متوجه میشی چه بازی هست.😈",
         downloadLink: "games/game/download.html"
       }
