--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
     <ul>
       <li><a href="programs.html">برنامه‌ها</a></li>
       <li><a href="games.html">بازی‌ها</a></li>
+      <li><a href="lock.html">فایل های ادمین</a></li>
     </ul>
   </div>
   
