--- a/programs.html
+++ b/programs.html
@@ -185,6 +185,14 @@
         description: "این برنامه ، یک ماشین حساب ساخته شده با زبان برنامه نویسی پایتون است.",
         downloadLink: "programs/Simple_calculator/download.html",
         hearts: 0
+      },
+      {
+        name: "MiniNikProject",
+        icon: "logo.png",
+        images: ["Screenshot.png"],
+        description: "این برنامه معدل شما را محاسبه می کند.این برنامه ساخته شده توسط سلطان نیکوام است.این یک برنامه فوق حرفه ای است.",
+        downloadLink: "programs/MiniNikProject/download.html",
+        hearts: 0
       }
       // برای افزودن برنامه جدید، کافیست یک شیء جدید به این آرایه اضافه کنید.
     ];
