--- a/programs.html
+++ b/programs.html
@@ -190,7 +190,7 @@
         name: "MiniNikProject",
         icon: "logo.png",
         images: ["Screenshot.png"],
-        description: "این برنامه معدل شما را محاسبه می کند.این برنامه ساخته شده توسط سلطان نیکوام است.این یک برنامه فوق حرفه ای است.",
+        description: "این برنامه معدل شما را محاسبه می کند.این برنامه ساخته شده توسط سلطان نیکونام است.این یک برنامه فوق حرفه ای است.",
         downloadLink: "programs/MiniNikProject/download.html",
         hearts: 0
       }
