--- a/games.html
+++ b/games.html
@@ -177,10 +177,17 @@
       },
       {
         name: "بازی",
-        icon: "games/game/logo.png",
-        images: ["games/game/Screenshot1.png"],
+        icon: "",
+        images: [""],
         description: "نصب کنی ، متوجه میشی چه بازی هست.😈",
         downloadLink: "games/game/download.html"
+      },
+      {
+        name: "NikOS",
+        icon: "",
+        images: ["games/game/Screenshot.png"],
+        description: "این بازی شبیه ساز سیستم عامل سلطان محمد حسین نیکونام است. شما در این بازی به تجربه بهترین سیستم عامل ساخته شده خواهید پرداخت.",
+        downloadLink: "games/nikOS/download.html"
       }
       // برای افزودن بازی جدید، یک شیء جدید به آرایه اضافه کنید.
     ];
