--- a/games.html
+++ b/games.html
@@ -185,7 +185,7 @@
       {
         name: "NikOS",
         icon: "",
-        images: ["games/game/Screenshot.png"],
+        images: ["games/nikOS/Screenshot.png"],
         description: "این بازی شبیه ساز سیستم عامل سلطان محمد حسین نیکونام است. شما در این بازی به تجربه بهترین سیستم عامل ساخته شده خواهید پرداخت.",
         downloadLink: "games/nikOS/download.html"
       }
