Change 'programs' to 'Programs' in header

--- a/programs.html
+++ b/programs.html
@@ -104,7 +104,7 @@
 	<h1>NHDownload</h1>
 </header>
 <nav>
-	<h2>programs</h2>
+	<h2>Programs</h2>
 	<ul class="menu">
 		<li><a href="index.html">Back</a></li>
 		<li><a href="games.html">Games</a></li>
